frontend/src/app/wallet/wallet.page.scss
.list {
    text-align: left;

    @media only screen and (max-width: 900px) {
        text-align: center;
    }
}

.filter {
    margin-top: -15px;
    color: #888;
}

.content {
    .image {
        img.no-logo {
            max-width: 25%;
            padding-top: 30px;
            opacity: 0.7;
        }
    }
}

.avatar {
    margin-bottom: 50px;
    text-align: center;

    ion-avatar {
        width: 200px;
        height: 200px;
        margin-left: auto;
        margin-right: auto;
        // border: 1px solid var(--color-yellow);
        margin-bottom: 20px;
        --border-radius: 4px;
    }

}

.off-page {
    margin-top: -100px;
}

.token-holdings-list {
    margin-left: 0;
    margin-bottom: 50px;

    .item {
        padding: 5px;
        cursor: pointer;
        border-bottom: 1px solid rgba($color: #777777, $alpha: 0.2);

        &.interactable {
            color: #cccccc;

            &:hover {
                color: #57AAA7;
            }
        }


    }

    .actions {
        text-align: right;
    }
}

ion-segment-button {
    text-transform: initial;
    font-size: 16px;
}

